@@ -1,5 +1,5 @@
 #!/bin/bash
 
-python pge.py &
+python pgepygame.py &
 sleep 1
 ./a.out
